After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707008 - [0.10] pulsesink: libgstpulse crash in webkit under rapid <audio> src switching
[0.10] pulsesink: libgstpulse crash in webkit under rapid <audio> src switching
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.31
Other Linux
: Normal major
: 0.10.32
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-28 18:14 UTC by michael.goffioul
Modified: 2013-08-28 18:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix the crash (557 bytes, patch)
2013-08-28 18:14 UTC, michael.goffioul
committed Details | Review

Description michael.goffioul 2013-08-28 18:14:39 UTC
Created attachment 253427 [details] [review]
Patch to fix the crash

I'm developing a webapp with a webkit-based browser as the client (on a Linux F18-based system). On one page, there's a <audio> element to play remote MP3 (served through HTTP). Due to user interaction, it's possible that the "src" attribute of the <audio> element is switching fast (e.g. 2 to 3 times per sec). Under such scenario, sometimes I experience a crash in libgstpulse, which can be solved by the attached patch. Debugging with gdb shows that "pbuf" is NULL when the crash occurs.

The attached patch appears to solve the crash.
Comment 1 Tim-Philipp Müller 2013-08-28 18:48:48 UTC
Michael, many thanks for the patch, but GStreamer 0.10 is no longer maintained I'm afraid, and this issue is fixed in 1.x already.

However, since this is such a trivial and obviously correct fix, and it fixes a crash, I'll push it to the 0.10 branch anyway. I don't expect anyone to pick it up though. There won't be any more 0.10 releases.

Please provide a patch in "git format-patch" format next time, thanks!


commit 5af6f5bfb6c3619a9ccc3b1681579aeb90e8b89a
Author: Michael Goffioul <michael.goffioul@gmail.com>
Date:   Wed Aug 28 19:46:09 2013 +0100

    pulsesink: fix crash in webkit under rapid <audio> src switching
    
    https://bugzilla.gnome.org/show_bug.cgi?id=707008