pulsesink: fix crash in webkit under rapid <audio> src switching

https://bugzilla.gnome.org/show_bug.cgi?id=707008